[package]
name = "program"
version = "6.0.0"
edition = "2021"
[dependencies]
hmac = "0.12.1"
sha2 = "0.10.2"
hex = "0.4.3"
time = "0.3.12"
serde = { version = "1.0.142", features = ["derive"] }
futures = "0.3.21"
reqwest = "0.11.11"
tokio = { version = "1.20.1", features = ["full"] }
once_cell = "1.13.0"
magic-crypt = "3.1.10"
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
url = "2.2.2"
futures-util = "0.3.21"
json = "0.12.4"
rand = "0.8.5"
urlencoding = "2.1.0"
chrono = "0.4.22"